--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
-serde = "1.0.152"
+mongodb = "2.3.1"
 
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.2"
